Update group slide

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ background-size: cover
 
 
 .block[.center.bold[People]
-.center[5 postdocs (+1 to hire), 3 PhD students (+2 to hire), 1 MSc student]
+.center[5 postdocs, 4 PhD students (+2 to hire), 1 MSc student]
 ]
 
 .center[
